# cppRest

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  install-server.sh  run.sh  start-server.sh  stop-server.sh  uninstall-server.sh
include/: CppCache.hpp  CppRest.hpp  data_structures.hpp  json.hpp  jwt.hpp
lib/: CppRest.cpp  http_server.cpp  json.cpp  jwt.cpp
src/: CppCache.cpp  data_structures.cpp  http_server.cpp  http_server.hpp  jwt.hpp  main.cpp
templates/: index.html
